# memoryintelligence-mcp

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  UMO_FORMAT.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/mi_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  embedder.py  indexer.py  keys.py  local_index.py  localreads.py  paths.py  scrub.py  server.py  umo_format.py  vault.py
tests/: test_api_contract.py  test_ask_explain.py  test_backfill.py  test_cli_setup.py  test_cli_wire.py  test_client_retry.py  test_conformance.py  test_consent_gate.py  test_contract_endpoints.py  test_embedder.py  test_indexer.py  test_local_index.py  test_localreads.py  test_output_shaping.py  test_scrub.py  test_vault_roundtrip.py  test_version_consistency.py
tests/fixtures/: expected_metadata.json  expected_payload.json  golden.umo  mi_public_key.b64
